# SIN_Editore

./: CMakeLists.txt  ci.yml  main.cpp
.github/workflows/: ci.yml
src/: editor.h  highlighter.h  main.cpp  piece_table.cpp  piece_table.h
